Fix overflow-y (make bottom team names visible)

--- a/extension/scss/stream.scss
+++ b/extension/scss/stream.scss
@@ -1,3 +1,5 @@
+@import '../../bower_components/normalize-scss/sass/normalize.scss';
+
 @font-face {
     font-family: Exo;
     src: url(/fonts/Exo-Medium.ttf);
@@ -10,9 +12,9 @@ html {
     background-position: center center;
     color: white;
     font-family: Exo, sans-serif;
-    overflow: hidden;
-    height: 100%;
-    min-height: 100%;
+    overflow-x: hidden;
+    height: 100vh;
+    min-height: 100vh;
 }
 
 div, body, html {
@@ -24,7 +26,6 @@ div, body, html {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 20px;
     height: 100%;
 
     .vs {
@@ -91,3 +92,5 @@ div, body, html {
         }
     }
 }
+
+@import 'sexification';
